--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title>V2 Geometry</title>
+    <title>V2 Geometry 1</title>
 
 
     <link href="./styles/icon.css" rel="stylesheet">
@@ -16,7 +16,6 @@
 
 
     <script src="./scripts/html2canvas.min.js"></script>
-    <script src="./scripts/anime.min.js"></script>
     <script src="./scripts/jquery-3.1.1.min.js"></script>
     <script src="./scripts/jquery-ui.min.js"></script>
 
