--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title>V2 Geometry 1</title>
+    <title>V2 Geometry</title>
 
     <link href="./styles/icon.css" rel="stylesheet">
 
